experiement_output/error_log/nondex-vojkovic-ForgeGradle.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1215/wd/NonDex-plugin-test/github.com/vojkovic/ForgeGradle/src/main/java/net/minecraftforge/gradle/user/patcherUser/TaskApplyBinPatches.java:35: warning: [removal] Pack200 in java.util.jar has been deprecated and marked for removal
import java.util.jar.Pack200;
                    ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1215/wd/NonDex-plugin-test/github.com/vojkovic/ForgeGradle/src/main/java/net/minecraftforge/gradle/user/liteloader/LiteModTask.java:30: error: cannot find symbol
import org.gradle.api.internal.ClosureBackedAction;
                              ^
  symbol:   class ClosureBackedAction
  location: package org.gradle.api.internal
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1215/wd/NonDex-plugin-test/github.com/vojkovic/ForgeGradle/src/main/java/net/minecraftforge/gradle/tasks/JenkinsChangelog.java:37: error: package javax.xml.bind does not exist
import javax.xml.bind.DatatypeConverter;
                     ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1215/wd/NonDex-plugin-test/github.com/vojkovic/ForgeGradle/src/main/java/net/minecraftforge/gradle/patcher/TaskGenBinPatches.java:38: warning: [removal] Pack200 in java.util.jar has been deprecated and marked for removal
import java.util.jar.Pack200;
                    ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1215/wd/NonDex-plugin-test/github.com/vojkovic/ForgeGradle/src/main/java/net/minecraftforge/gradle/patcher/TaskGenBinPatches.java:39: warning: [removal] Pack200 in java.util.jar has been deprecated and marked for removal
import java.util.jar.Pack200.Packer;
                    ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1215/wd/NonDex-plugin-test/github.com/vojkovic/ForgeGradle/src/main/java/net/minecraftforge/gradle/patcher/TaskGenBinPatches.java:39: warning: [removal] Pack200 in java.util.jar has been deprecated and marked for removal
import java.util.jar.Pack200.Packer;
                    ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1215/wd/NonDex-plugin-test/github.com/vojkovic/ForgeGradle/src/main/java/net/minecraftforge/gradle/patcher/TaskGenBinPatches.java:39: warning: [removal] Packer in Pack200 has been deprecated and marked for removal
import java.util.jar.Pack200.Packer;
                            ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1215/wd/NonDex-plugin-test/github.com/vojkovic/ForgeGradle/src/main/java/net/minecraftforge/gradle/common/BasePlugin.java:251: warning: [deprecation] Boolean(boolean) in Boolean has been deprecated
        if (!"true".equals(disableUpdateCheck) && !"yes".equals(disableUpdateCheck) && !new Boolean(true).equals(disableUpdateCheck))
                                                                                        ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1215/wd/NonDex-plugin-test/github.com/vojkovic/ForgeGradle/src/main/java/net/minecraftforge/gradle/user/UserBasePlugin.java:519: warning: [deprecation] COMPILE_CONFIGURATION_NAME in JavaPlugin has been deprecated
        project.getConfigurations().getByName(JavaPlugin.COMPILE_CONFIGURATION_NAME).extendsFrom(project.getConfigurations().getByName(CONFIG_DC_RESOLVED));
                                                        ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1215/wd/NonDex-plugin-test/github.com/vojkovic/ForgeGradle/src/main/java/net/minecraftforge/gradle/user/UserBasePlugin.java:528: warning: [deprecation] COMPILE_CONFIGURATION_NAME in JavaPlugin has been deprecated
        project.getDependencies().add(JavaPlugin.COMPILE_CONFIGURATION_NAME, project.fileTree("libs"));
                                                ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1215/wd/NonDex-plugin-test/github.com/vojkovic/ForgeGradle/src/main/java/net/minecraftforge/gradle/user/patcherUser/TaskApplyBinPatches.java:202: warning: [removal] Pack200 in java.util.jar has been deprecated and marked for removal
            Pack200.newUnpacker().unpack(binpatchesDecompressed, jos);
            ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1215/wd/NonDex-plugin-test/github.com/vojkovic/ForgeGradle/src/main/java/net/minecraftforge/gradle/user/liteloader/LiteModTask.java:105: error: cannot find symbol
        ClosureBackedAction.execute(this.getJson(), configureClosure);
        ^
  symbol:   variable ClosureBackedAction
  location: class LiteModTask
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1215/wd/NonDex-plugin-test/github.com/vojkovic/ForgeGradle/src/main/java/net/minecraftforge/gradle/tasks/JenkinsChangelog.java:74: error: cannot find symbol
            auth = "Basic " + DatatypeConverter.printBase64Binary(raw.getBytes());
                              ^
  symbol:   variable DatatypeConverter
  location: class JenkinsChangelog
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1215/wd/NonDex-plugin-test/github.com/vojkovic/ForgeGradle/src/main/java/net/minecraftforge/gradle/patcher/TaskGenBinPatches.java:248: warning: [removal] Packer in Pack200 has been deprecated and marked for removal
        Packer packer = Pack200.newPacker();
        ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1215/wd/NonDex-plugin-test/github.com/vojkovic/ForgeGradle/src/main/java/net/minecraftforge/gradle/patcher/TaskGenBinPatches.java:248: warning: [removal] Pack200 in java.util.jar has been deprecated and marked for removal
        Packer packer = Pack200.newPacker();
                        ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1215/wd/NonDex-plugin-test/github.com/vojkovic/ForgeGradle/src/main/java/net/minecraftforge/gradle/patcher/TaskGenBinPatches.java:251: warning: [removal] Packer in Pack200 has been deprecated and marked for removal
        props.put(Packer.EFFORT, "9");
                  ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1215/wd/NonDex-plugin-test/github.com/vojkovic/ForgeGradle/src/main/java/net/minecraftforge/gradle/patcher/TaskGenBinPatches.java:252: warning: [removal] Packer in Pack200 has been deprecated and marked for removal
        props.put(Packer.KEEP_FILE_ORDER, Packer.TRUE);
                  ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1215/wd/NonDex-plugin-test/github.com/vojkovic/ForgeGradle/src/main/java/net/minecraftforge/gradle/patcher/TaskGenBinPatches.java:252: warning: [removal] Packer in Pack200 has been deprecated and marked for removal
        props.put(Packer.KEEP_FILE_ORDER, Packer.TRUE);
                                          ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1215/wd/NonDex-plugin-test/github.com/vojkovic/ForgeGradle/src/main/java/net/minecraftforge/gradle/patcher/TaskGenBinPatches.java:253: warning: [removal] Packer in Pack200 has been deprecated and marked for removal
        props.put(Packer.UNKNOWN_ATTRIBUTE, Packer.PASS);
                  ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1215/wd/NonDex-plugin-test/github.com/vojkovic/ForgeGradle/src/main/java/net/minecraftforge/gradle/patcher/TaskGenBinPatches.java:253: warning: [removal] Packer in Pack200 has been deprecated and marked for removal
        props.put(Packer.UNKNOWN_ATTRIBUTE, Packer.PASS);
                                            ^
4 errors
16 warnings

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 28s
